# adaptagrams

./: README.md
.github/workflows/: ci.yml
cola/: CMakeLists.txt
cola/libavoid/: CMakeLists.txt  assertions.h
cola/libavoid/tests/: checkpointNudging1.cpp
cola/libavoid/tests/new/: connectorChanges.cpp  helpers.h  mixedConnTypes.cpp  moveShapeConnectionPins.cpp
cola/libavoid/tests/new/orthogonal/: hierarchical.cpp
cola/libcola/: colafd.cpp
cola/libdialect/: aca.cpp  constraints.cpp  graphs.cpp  nodes.cpp  opts.h  routing.cpp  trees.cpp
cola/libtopology/: cola_topology_addon.cpp
